--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
     - "3.5"
 install: "python setup.py install"
 script:
-    - "venv/bin/pyaur search foobar"
+    - "python venv/bin/pyaur search foobar"
