--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
     - "3.6"
     - "3.5"
-install: "python setup.py install"
+install:
+    - "python setup.py install"
+    - "pip install Click"
+    - "pip install jsonpath"
 script:
     - "python venv/bin/pyaur search foobar"
